@startuml
skinparam dpi 300
skinparam shadowing false
skinparam packageStyle rectangle
skinparam roundcorner 6
skinparam linetype ortho
skinparam defaultFontName "Arial"
skinparam defaultFontSize 11
skinparam classFontSize 11
skinparam classAttributeFontSize 10

skinparam class {
    BackgroundColor #FFFFFF
    BorderColor #2D3748
    ArrowColor #2D3748
}

package "Routing & Boundary" {
    class MasterTenantStatusRoute <<REST API>> {
        + PATCH /api/v1/master/tenants/{id}/status
    }
}

package "Controller Layer" {
    class MasterTenantController <<Controller>> {
        - masterTenantService: MasterTenantService
        + updateTenantStatus(id: Long, status: String): ApiResponse<TenantResponse>
    }
}

package "DTO Layer" {
    class TenantResponse <<Response>> {
        + id: Long
        + code: String
        + name: String
        + subdomain: String
        + dbName: String
        + status: String
        + createdAt: LocalDateTime
        + updatedAt: LocalDateTime
    }

    class TenantStatusChangedEvent <<Domain Event>> {
        + tenantId: Long
        + code: String
        + oldStatus: String
        + newStatus: String
        + timestamp: LocalDateTime
    }
}

package "Service Layer" {
    interface MasterTenantService <<Service>> {
        + updateTenantStatus(id: Long, status: String): TenantResponse
        + getTenantById(id: Long): TenantResponse
    }

    class MasterTenantServiceImpl <<Service>> {
        - tenantInfoRepository: TenantInfoRepository
        - connectionProvider: DynamicMultiTenantConnectionProvider
        - rabbitTemplate: RabbitTemplate
        + updateTenantStatus(id: Long, status: String): TenantResponse
        + getTenantById(id: Long): TenantResponse
    }
}

package "Repository Layer" {
    interface TenantInfoRepository <<Repository>> {
        + changeOperationalStatus(id: Long, status: String): int
        + findById(id: Long): Optional<TenantInfo>
    }
}

package "Domain Entity Layer" {
    enum TenantStatus <<Enum>> {
        PROVISIONING
        ACTIVE
        SUSPENDED
        FAILED
    }

    class TenantInfo <<Entity>> {
        - id: Long
        - code: String
        - name: String
        - subdomain: String
        - dbName: String
        - status: TenantStatus
        - createdAt: LocalDateTime
        - updatedAt: LocalDateTime
    }
}

package "Infrastructure & Persistence" {
    class MasterPostgreSQL <<Database>> {
        .. Master Landlord DB ..
        + tenants
    }

    class DynamicMultiTenantConnectionProvider <<DataSource>> {
        .. Connection Pool Eviction ..
        - tenantDataSources: Map<String, HikariDataSource>
        + evict(tenantCode: String): void
    }

    class RabbitMQExchange <<Queue>> {
        .. Tenant Lifecycle Events ..
        + smarthire.tenant.status.changed
    }
}

' Relationships
MasterTenantStatusRoute ..> MasterTenantController : defines route >
MasterTenantController --> MasterTenantService : delegates >
MasterTenantController ..> TenantResponse : returns >

MasterTenantService <|.. MasterTenantServiceImpl : implements
MasterTenantServiceImpl ..> TenantResponse : creates >
MasterTenantServiceImpl ..> TenantStatusChangedEvent : emits >
MasterTenantServiceImpl --> TenantInfoRepository : executes atomic update >
MasterTenantServiceImpl --> DynamicMultiTenantConnectionProvider : evicts pool on suspend >
MasterTenantServiceImpl --> RabbitMQExchange : publishes status event >

TenantInfoRepository --> TenantInfo : manages >
TenantInfoRepository --> MasterPostgreSQL : persists to >
TenantInfo ..> TenantStatus : typed by >

@enduml
